Add AccessContect.asTenant and use where possible
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>